--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "move2",
+  "name": "move",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas": "^2.11.2",
+    "cross-env": "^7.0.3",
+    "pdf-img-convert": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint . --ext .js,.jsx",
+    "lint:fix": "npm run lint -- --fix",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
+    "electron:build": "yarn build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron:start0": "wait-on tcp:3000 && electron .",
+    "electron:start": "electron ."
   },
+  "main": "public/electron/main.js",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +44,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "electron": "^27.0.2",
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^7.0.1"
   }
 }
